Fixed area_thesaurus CSS and layout issues. Re-factorized ts_object JS for easy use (moved render functions to new file render_ts_object.js)

--- a/core/component_select/css/component_select.less
+++ b/core/component_select/css/component_select.less
@@ -5,7 +5,8 @@
 * Included from main.less file
 */
 .component_select,
-.component_select_lang {
+.component_select_lang,
+.component_relation_model {
 
 	// shared
 	>.content_data {
